Added a wrapper BufferedSegment for better design, fixed the bug related to the slowed performance after the cache becomes full.